Upgrade to dw20 1.12 (#1)