@@ -1,6 +1,10 @@
-set MCVER=1.7.10
+rem Do not touch
+set MCVER=1.12.2
 set JARFILE=minecraft_server.%MCVER%.jar
 set LAUNCHWRAPPERVERSION=1.12
 set LAUNCHWRAPPER=net\minecraft\launchwrapper\%LAUNCHWRAPPERVERSION%\launchwrapper-%LAUNCHWRAPPERVERSION%.jar
-set JAVACMD=java
+set FORGEJAR=FTBserver-1.12.2-14.23.3.2691-universal.jar
 
+rem can be changed by user
+set MAX_RAM=2048M
+set JAVA_PARAMETERS=-XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:+CMSClassUnloadingEnabled -XX:ParallelGCThreads=5 -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10
